Name:                yesod-recaptcha
Version:             0.1
Synopsis:            Dead simple support for reCAPTCHA on Yesod applications.
-- Description:
Homepage:            https://github.com/meteficha/yesod-recaptcha
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa
Maintainer:          felipe.lessa@gmail.com
-- Copyright:
Category:            Web
Build-type:          Simple
-- Extra-source-files:
Cabal-version:       >=1.2


Library
  -- Exposed-modules:
  -- Build-depends:
  -- Other-modules:
  -- Build-tools:
